# adventure

./: .gitignore  CONTRIBUTING.md  README.md
client/askservice-mobile/: run.sh
client/fe-mobile/: Makefile
server/services/adventure/: .env.local  Makefile  db.sqlite3  pyproject.toml  script.sql
server/services/adventure/app/: asgi.py  decorators.py  ftp_utils.py  settings.py  urls.py  utils.py  views.py  wsgi.py
server/services/adventure/app_utils/: serializers.py
server/services/adventure/docs/: spec.md
server/services/adventure/images/: models.py
server/services/adventure/images/migrations/: 0001_initial.py  0002_alter_image_image.py  0003_alter_image_image.py
server/services/adventure/like/: admin.py  models.py
server/services/adventure/like/migrations/: 0001_initial.py  0002_remove_likeitem_user.py  0003_likeitem_user.py  0004_likeitemdetail_likeitem_like_detail.py  0005_remove_likeitem_like_detail_likeitem_comment_and_more.py
server/services/adventure/static/swagger/: index.html  swagger-initializer.js
server/services/adventure/static/swagger/src/: examples.yml  main.yml  parameters.yml  responses.yml  schemas.yml
server/services/adventure/store/: admin.py  models.py  urls.py  views.py
server/services/adventure/store/migrations/: 0001_initial.py  0002_product_slug.py  0003_customer_store_custo_last_na_2e448d_idx.py  0004_alter_category_options_alter_product_options_and_more.py  0005_product_photo.py  0006_remove_product_photo.py  0007_alter_product_stock.py
server/services/adventure/store_like/: admin.py  apps.py
(+8 files in other folders)
